k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orca-web
  namespace: orca-web
  labels:
    app: orca-web
spec:
  selector:
    app: orca-web
  ports:
    - name: http
      port: 80
      targetPort: http
