k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orca-web
  namespace: orca-web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: www.orcademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orca-web
                port:
                  number: 80
    - host: orcademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orca-web
                port:
                  number: 80
